--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -10,7 +10,9 @@ amtgen {
 
 aobd {
     B:blockCadmium=true
+    B:blockElnTungsten=true
     B:blockIndium=true
+    B:blockSilicon=true
 }
 
 
@@ -4168,6 +4170,91 @@ electricraft {
 }
 
 
+eln {
+    B:ElnOre.1=true
+    B:ElnOre.4=true
+    B:ElnOre.5=true
+    B:ElnOre.6=true
+    B:ElnSixNode.128=false
+    B:ElnSixNode.136=false
+    B:ElnSixNode.192=false
+    B:ElnSixNode.2048=false
+    B:ElnSixNode.2052=false
+    B:ElnSixNode.2056=false
+    B:ElnSixNode.2060=false
+    B:ElnSixNode.2064=false
+    B:ElnSixNode.3073=false
+    B:ElnSixNode.4096=false
+    B:ElnSixNode.4097=false
+    B:ElnSixNode.4100=false
+    B:ElnSixNode.4101=false
+    B:ElnSixNode.4102=false
+    B:ElnSixNode.4103=false
+    B:ElnSixNode.4104=false
+    B:ElnSixNode.4108=false
+    B:ElnSixNode.4109=false
+    B:ElnSixNode.4160=false
+    B:ElnSixNode.4224=false
+    B:ElnSixNode.4225=false
+    B:ElnSixNode.4228=false
+    B:ElnSixNode.5888=false
+    B:ElnSixNode.5896=false
+    B:ElnSixNode.5904=false
+    B:ElnSixNode.5952=false
+    B:ElnSixNode.5953=false
+    B:ElnSixNode.6016=false
+    B:ElnSixNode.6017=false
+    B:ElnSixNode.6018=false
+    B:ElnSixNode.6019=false
+    B:ElnSixNode.6080=false
+    B:ElnSixNode.6081=false
+    B:ElnSixNode.6088=false
+    B:ElnSixNode.6092=false
+    B:ElnSixNode.6096=false
+    B:ElnSixNode.6144=false
+    B:ElnSixNode.6145=false
+    B:ElnSixNode.6152=false
+    B:ElnSixNode.6176=false
+    B:ElnSixNode.6178=false
+    B:ElnSixNode.6208=false
+    B:ElnSixNode.6209=false
+    B:ElnSixNode.6210=false
+    B:ElnSixNode.6212=false
+    B:ElnSixNode.6272=false
+    B:ElnSixNode.6276=false
+    B:ElnSixNode.6277=false
+    B:ElnSixNode.6400=false
+    B:ElnSixNode.6401=false
+    B:ElnSixNode.6464=false
+    B:ElnSixNode.6465=false
+    B:ElnSixNode.6528=false
+    B:ElnSixNode.6536=false
+    B:ElnSixNode.6592=false
+    B:ElnSixNode.6593=false
+    B:ElnSixNode.6656=false
+    B:ElnSixNode.6657=false
+    B:ElnSixNode.6660=false
+    B:ElnSixNode.6664=false
+    B:ElnSixNode.6668=false
+    B:ElnSixNode.6669=false
+    B:ElnSixNode.6912=false
+    B:ElnSixNode.6913=false
+    B:ElnSixNode.6976=false
+    B:ElnSixNode.6980=false
+    B:ElnSixNode.7424=false
+    B:ElnSixNode.7488=false
+    B:ElnSixNode.7492=false
+    B:ElnSixNode.7496=false
+    B:ElnTransparentNode=false
+    B:ElnghostBlock=false
+    B:ElnlightBlock=false
+    B:elnElnProbe=false
+    B:elnEnergyConverterElnToOtherHVUBlock=false
+    B:elnEnergyConverterElnToOtherLVUBlock=false
+    B:elnEnergyConverterElnToOtherMVUBlock=false
+}
+
+
 enderio {
     B:blockAlloySmelter=false
     B:blockAttractor=false
@@ -5130,6 +5217,21 @@ flatsigns {
 }
 
 
+forbiddenmagic {
+    B:ArcaneCake=false
+    B:InkFlower=false
+    B:StarBlock=true
+    B:TaintBlock=true
+    B:TaintBlock.1=true
+    B:TaintLeaves=false
+    B:TaintLog=true
+    B:TaintPlank=true
+    B:TaintSapling=false
+    B:UmbralBush=false
+    B:WrathCage=false
+}
+
+
 forestry {
     B:alveary=false
     B:alveary.2=false
@@ -5687,6 +5789,7 @@ gardentrees {
     B:thinlog.12499=false
     B:thinlog.1269=false
     B:thinlog.12699=false
+    B:thinlog.1270=false
     B:thinlog.12701=false
     B:thinlog.12715=false
     B:thinlog.12716=false
@@ -5707,10 +5810,17 @@ gardentrees {
     B:thinlog.12854=false
     B:thinlog.12855=false
     B:thinlog.12856=false
+    B:thinlog.1286=false
     B:thinlog.12873=false
     B:thinlog.12883=false
     B:thinlog.12909=false
     B:thinlog.12919=false
+    B:thinlog.13114=false
+    B:thinlog.13150=false
+    B:thinlog.13258=false
+    B:thinlog.13259=false
+    B:thinlog.13260=false
+    B:thinlog.13261=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -5737,13 +5847,16 @@ gardentrees {
     B:thinlog.13532=false
     B:thinlog.13536=false
     B:thinlog.13557=false
+    B:thinlog.13558=false
     B:thinlog.13573=false
+    B:thinlog.13574=false
     B:thinlog.169=false
     B:thinlog.176=false
     B:thinlog.182=false
     B:thinlog.193=false
     B:thinlog.2=false
     B:thinlog.211=false
+    B:thinlog.246=false
     B:thinlog.3=false
     B:thinlog.4=false
     B:thinlog.411=false
@@ -5759,6 +5872,7 @@ gardentrees {
     B:thinlog.4289=false
     B:thinlog.429=false
     B:thinlog.4307=false
+    B:thinlog.4342=false
     B:thinlog.435=false
     B:thinlog.437=false
     B:thinlog.4507=false
@@ -5811,7 +5925,15 @@ gardentrees {
     B:thinlog.4881=false
     B:thinlog.4883=false
     B:thinlog.4885=false
+    B:thinlog.4922=false
+    B:thinlog.4923=false
+    B:thinlog.4940=false
+    B:thinlog.4958=false
     B:thinlog.5=false
+    B:thinlog.5066=false
+    B:thinlog.5067=false
+    B:thinlog.5068=false
+    B:thinlog.5069=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -5838,7 +5960,9 @@ gardentrees {
     B:thinlog.5340=false
     B:thinlog.5344=false
     B:thinlog.5365=false
+    B:thinlog.5366=false
     B:thinlog.5381=false
+    B:thinlog.5382=false
     B:thinlog.561=false
     B:thinlog.562=false
     B:thinlog.563=false
@@ -5864,6 +5988,7 @@ gardentrees {
     B:thinlog.62040=false
     B:thinlog.62050=false
     B:thinlog.621=false
+    B:thinlog.62281=false
     B:thinlog.631=false
     B:thinlog.761=false
     B:thinlog.767=false
@@ -5872,11 +5997,16 @@ gardentrees {
     B:thinlog.785=false
     B:thinlog.787=false
     B:thinlog.789=false
+    B:thinlog.826=false
+    B:thinlog.827=false
+    B:thinlog.833=false
     B:thinlog.8361=false
     B:thinlog.8403=false
+    B:thinlog.844=false
     B:thinlog.8603=false
     B:thinlog.8605=false
     B:thinlog.8619=false
+    B:thinlog.862=false
     B:thinlog.8620=false
     B:thinlog.8645=false
     B:thinlog.8647=false
@@ -5898,6 +6028,12 @@ gardentrees {
     B:thinlog.8787=false
     B:thinlog.8813=false
     B:thinlog.8823=false
+    B:thinlog.9018=false
+    B:thinlog.9054=false
+    B:thinlog.9162=false
+    B:thinlog.9163=false
+    B:thinlog.9164=false
+    B:thinlog.9165=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -5924,7 +6060,13 @@ gardentrees {
     B:thinlog.9436=false
     B:thinlog.9440=false
     B:thinlog.9461=false
+    B:thinlog.9462=false
     B:thinlog.9477=false
+    B:thinlog.9478=false
+    B:thinlog.970=false
+    B:thinlog.971=false
+    B:thinlog.972=false
+    B:thinlog.973=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -5956,6 +6098,7 @@ gardentrees {
     B:thinlogfence.12499=false
     B:thinlogfence.1269=false
     B:thinlogfence.12699=false
+    B:thinlogfence.1270=false
     B:thinlogfence.12701=false
     B:thinlogfence.12715=false
     B:thinlogfence.12716=false
@@ -5976,10 +6119,17 @@ gardentrees {
     B:thinlogfence.12854=false
     B:thinlogfence.12855=false
     B:thinlogfence.12856=false
+    B:thinlogfence.1286=false
     B:thinlogfence.12873=false
     B:thinlogfence.12883=false
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
+    B:thinlogfence.13114=false
+    B:thinlogfence.13150=false
+    B:thinlogfence.13258=false
+    B:thinlogfence.13259=false
+    B:thinlogfence.13260=false
+    B:thinlogfence.13261=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6006,13 +6156,16 @@ gardentrees {
     B:thinlogfence.13532=false
     B:thinlogfence.13536=false
     B:thinlogfence.13557=false
+    B:thinlogfence.13558=false
     B:thinlogfence.13573=false
+    B:thinlogfence.13574=false
     B:thinlogfence.169=false
     B:thinlogfence.176=false
     B:thinlogfence.182=false
     B:thinlogfence.193=false
     B:thinlogfence.2=false
     B:thinlogfence.211=false
+    B:thinlogfence.246=false
     B:thinlogfence.3=false
     B:thinlogfence.4=false
     B:thinlogfence.411=false
@@ -6028,6 +6181,7 @@ gardentrees {
     B:thinlogfence.4289=false
     B:thinlogfence.429=false
     B:thinlogfence.4307=false
+    B:thinlogfence.4342=false
     B:thinlogfence.435=false
     B:thinlogfence.437=false
     B:thinlogfence.4507=false
@@ -6080,7 +6234,15 @@ gardentrees {
     B:thinlogfence.4881=false
     B:thinlogfence.4883=false
     B:thinlogfence.4885=false
+    B:thinlogfence.4922=false
+    B:thinlogfence.4923=false
+    B:thinlogfence.4940=false
+    B:thinlogfence.4958=false
     B:thinlogfence.5=false
+    B:thinlogfence.5066=false
+    B:thinlogfence.5067=false
+    B:thinlogfence.5068=false
+    B:thinlogfence.5069=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6107,7 +6269,9 @@ gardentrees {
     B:thinlogfence.5340=false
     B:thinlogfence.5344=false
     B:thinlogfence.5365=false
+    B:thinlogfence.5366=false
     B:thinlogfence.5381=false
+    B:thinlogfence.5382=false
     B:thinlogfence.561=false
     B:thinlogfence.562=false
     B:thinlogfence.563=false
@@ -6133,6 +6297,7 @@ gardentrees {
     B:thinlogfence.62040=false
     B:thinlogfence.62050=false
     B:thinlogfence.621=false
+    B:thinlogfence.62281=false
     B:thinlogfence.631=false
     B:thinlogfence.761=false
     B:thinlogfence.767=false
@@ -6141,11 +6306,16 @@ gardentrees {
     B:thinlogfence.785=false
     B:thinlogfence.787=false
     B:thinlogfence.789=false
+    B:thinlogfence.826=false
+    B:thinlogfence.827=false
+    B:thinlogfence.833=false
     B:thinlogfence.8361=false
     B:thinlogfence.8403=false
+    B:thinlogfence.844=false
     B:thinlogfence.8603=false
     B:thinlogfence.8605=false
     B:thinlogfence.8619=false
+    B:thinlogfence.862=false
     B:thinlogfence.8620=false
     B:thinlogfence.8645=false
     B:thinlogfence.8647=false
@@ -6167,6 +6337,12 @@ gardentrees {
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
+    B:thinlogfence.9018=false
+    B:thinlogfence.9054=false
+    B:thinlogfence.9162=false
+    B:thinlogfence.9163=false
+    B:thinlogfence.9164=false
+    B:thinlogfence.9165=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6193,7 +6369,13 @@ gardentrees {
     B:thinlogfence.9436=false
     B:thinlogfence.9440=false
     B:thinlogfence.9461=false
+    B:thinlogfence.9462=false
     B:thinlogfence.9477=false
+    B:thinlogfence.9478=false
+    B:thinlogfence.970=false
+    B:thinlogfence.971=false
+    B:thinlogfence.972=false
+    B:thinlogfence.973=false
 }
 
 
@@ -6657,6 +6839,7 @@ magicalcrops {
     B:magicalcropsNetherCrop=false
     B:magicalcropsNickelCrop=false
     B:magicalcropsObsidianCrop=false
+    B:magicalcropsOsmiumCrop=false
     B:magicalcropsPeridotCrop=false
     B:magicalcropsPigCrop=false
     B:magicalcropsPlatinumCrop=false
@@ -6718,6 +6901,180 @@ malisisdoors {
     B:vanishingblock.2=false
     B:vanishingblock.3=false
     B:woodslidingdoor=false
+}
+
+
+mekanism {
+    B:BasicBlock=false
+    B:BasicBlock.1=false
+    B:BasicBlock.10=false
+    B:BasicBlock.11=false
+    B:BasicBlock.12=false
+    B:BasicBlock.13=false
+    B:BasicBlock.14=false
+    B:BasicBlock.15=false
+    B:BasicBlock.2=false
+    B:BasicBlock.3=false
+    B:BasicBlock.4=false
+    B:BasicBlock.5=false
+    B:BasicBlock.6=false
+    B:BasicBlock.7=false
+    B:BasicBlock.8=false
+    B:BasicBlock.9=false
+    B:BasicBlock2=false
+    B:BasicBlock2.1=false
+    B:BasicBlock2.2=false
+    B:BoundingBlock=false
+    B:CardboardBox=false
+    B:GasTank=false
+    B:GlowPlasticBlock=true
+    B:GlowPlasticBlock.1=true
+    B:GlowPlasticBlock.10=true
+    B:GlowPlasticBlock.11=true
+    B:GlowPlasticBlock.12=true
+    B:GlowPlasticBlock.13=true
+    B:GlowPlasticBlock.14=true
+    B:GlowPlasticBlock.15=true
+    B:GlowPlasticBlock.2=true
+    B:GlowPlasticBlock.3=true
+    B:GlowPlasticBlock.4=true
+    B:GlowPlasticBlock.5=true
+    B:GlowPlasticBlock.6=true
+    B:GlowPlasticBlock.7=true
+    B:GlowPlasticBlock.8=true
+    B:GlowPlasticBlock.9=true
+    B:MachineBlock=false
+    B:MachineBlock.1=false
+    B:MachineBlock.10=false
+    B:MachineBlock.11=false
+    B:MachineBlock.12=false
+    B:MachineBlock.13=false
+    B:MachineBlock.14=false
+    B:MachineBlock.15=false
+    B:MachineBlock.2=false
+    B:MachineBlock.3=false
+    B:MachineBlock.4=false
+    B:MachineBlock.8=false
+    B:MachineBlock.9=false
+    B:MachineBlock2=false
+    B:MachineBlock2.1=false
+    B:MachineBlock2.10=false
+    B:MachineBlock2.11=false
+    B:MachineBlock2.12=false
+    B:MachineBlock2.13=false
+    B:MachineBlock2.14=false
+    B:MachineBlock2.15=false
+    B:MachineBlock2.2=false
+    B:MachineBlock2.3=false
+    B:MachineBlock2.4=false
+    B:MachineBlock2.5=false
+    B:MachineBlock2.6=false
+    B:MachineBlock2.7=false
+    B:MachineBlock2.8=false
+    B:MachineBlock2.9=false
+    B:MachineBlock3.1=false
+    B:MachineBlock3.3=false
+    B:ObsidianTNT=false
+    B:OreBlock=true
+    B:OreBlock.1=true
+    B:OreBlock.2=true
+    B:PlasticBlock=true
+    B:PlasticBlock.1=true
+    B:PlasticBlock.10=true
+    B:PlasticBlock.11=true
+    B:PlasticBlock.12=true
+    B:PlasticBlock.13=true
+    B:PlasticBlock.14=true
+    B:PlasticBlock.15=true
+    B:PlasticBlock.2=true
+    B:PlasticBlock.3=true
+    B:PlasticBlock.4=true
+    B:PlasticBlock.5=true
+    B:PlasticBlock.6=true
+    B:PlasticBlock.7=true
+    B:PlasticBlock.8=true
+    B:PlasticBlock.9=true
+    B:PlasticFence=false
+    B:PlasticFence.1=false
+    B:PlasticFence.10=false
+    B:PlasticFence.11=false
+    B:PlasticFence.12=false
+    B:PlasticFence.13=false
+    B:PlasticFence.14=false
+    B:PlasticFence.15=false
+    B:PlasticFence.2=false
+    B:PlasticFence.3=false
+    B:PlasticFence.4=false
+    B:PlasticFence.5=false
+    B:PlasticFence.6=false
+    B:PlasticFence.7=false
+    B:PlasticFence.8=false
+    B:PlasticFence.9=false
+    B:ReinforcedPlasticBlock=true
+    B:ReinforcedPlasticBlock.1=true
+    B:ReinforcedPlasticBlock.10=true
+    B:ReinforcedPlasticBlock.11=true
+    B:ReinforcedPlasticBlock.12=true
+    B:ReinforcedPlasticBlock.13=true
+    B:ReinforcedPlasticBlock.14=true
+    B:ReinforcedPlasticBlock.15=true
+    B:ReinforcedPlasticBlock.2=true
+    B:ReinforcedPlasticBlock.3=true
+    B:ReinforcedPlasticBlock.4=true
+    B:ReinforcedPlasticBlock.5=true
+    B:ReinforcedPlasticBlock.6=true
+    B:ReinforcedPlasticBlock.7=true
+    B:ReinforcedPlasticBlock.8=true
+    B:ReinforcedPlasticBlock.9=true
+    B:RoadPlasticBlock=true
+    B:RoadPlasticBlock.1=true
+    B:RoadPlasticBlock.10=true
+    B:RoadPlasticBlock.11=true
+    B:RoadPlasticBlock.12=true
+    B:RoadPlasticBlock.13=true
+    B:RoadPlasticBlock.14=true
+    B:RoadPlasticBlock.15=true
+    B:RoadPlasticBlock.2=true
+    B:RoadPlasticBlock.3=true
+    B:RoadPlasticBlock.4=true
+    B:RoadPlasticBlock.5=true
+    B:RoadPlasticBlock.6=true
+    B:RoadPlasticBlock.7=true
+    B:RoadPlasticBlock.8=true
+    B:RoadPlasticBlock.9=true
+    B:SaltBlock=true
+    B:SlickPlasticBlock=true
+    B:SlickPlasticBlock.1=true
+    B:SlickPlasticBlock.10=true
+    B:SlickPlasticBlock.11=true
+    B:SlickPlasticBlock.12=true
+    B:SlickPlasticBlock.13=true
+    B:SlickPlasticBlock.14=true
+    B:SlickPlasticBlock.15=true
+    B:SlickPlasticBlock.2=true
+    B:SlickPlasticBlock.3=true
+    B:SlickPlasticBlock.4=true
+    B:SlickPlasticBlock.5=true
+    B:SlickPlasticBlock.6=true
+    B:SlickPlasticBlock.7=true
+    B:SlickPlasticBlock.8=true
+    B:SlickPlasticBlock.9=true
+}
+
+
+mekanismgenerators {
+    B:Generator=false
+    B:Generator.1=false
+    B:Generator.3=false
+    B:Generator.4=false
+    B:Generator.5=false
+    B:Generator.6=false
+    B:Reactor=false
+    B:Reactor.1=false
+    B:Reactor.3=false
+    B:Reactor.4=false
+    B:ReactorGlass=false
+    B:ReactorGlass.1=false
 }
 
 
