--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -89,7 +89,7 @@ general {
     B:vanillaParticleConfig.enabled=true
 
     # Set this to false to disable checking and alerting when new Botania versions come out.
-    B:versionChecking.enabled=true
+    B:versionChecking.enabled=false
 
     # Set this to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old Botania versions. Warning: Disabled by default because it may be laggy.
     B:wandBeam.static=false
@@ -243,6 +243,12 @@ shedding {
     I:CreeperBoss.lexiconDisplaySize=40
     I:CreeperBoss.metadata=0
     I:CreeperBoss.rate=-1
+
+    # Configuration of Shedding for EAReplicator
+    S:EAReplicator.item=
+    I:EAReplicator.lexiconDisplaySize=40
+    I:EAReplicator.metadata=0
+    I:EAReplicator.rate=-1
 
     # Configuration of Shedding for EnderDragon
     S:EnderDragon.item=
@@ -727,6 +733,18 @@ shedding {
     I:LavaSlime.lexiconDisplaySize=40
     I:LavaSlime.metadata=0
     I:LavaSlime.rate=-1
+
+    # Configuration of Shedding for Mekanism.BabySkeleton
+    S:Mekanism.BabySkeleton.item=
+    I:Mekanism.BabySkeleton.lexiconDisplaySize=40
+    I:Mekanism.BabySkeleton.metadata=0
+    I:Mekanism.BabySkeleton.rate=-1
+
+    # Configuration of Shedding for Mekanism.Robit
+    S:Mekanism.Robit.item=
+    I:Mekanism.Robit.lexiconDisplaySize=40
+    I:Mekanism.Robit.metadata=0
+    I:Mekanism.Robit.rate=-1
     S:MineFactoryReloaded.mfrEntityPinkSlime.item=
     I:MineFactoryReloaded.mfrEntityPinkSlime.lexiconDisplaySize=40
     I:MineFactoryReloaded.mfrEntityPinkSlime.metadata=0
