--- a/config/HardcoreEnderExpansion.cfg
+++ b/config/HardcoreEnderExpansion.cfg
@@ -27,13 +27,13 @@ general {
     S:decompositionBlacklist=
 
     # It is highly suggested to keep this option enabled. This will detect broken builds with critical errors that can crash your game. These are usually fixed very quickly, but it is important to notify people who downloaded the broken build.
-    B:enableBuildCheck=true
+    B:enableBuildCheck=false
 
     # Mechanic that allows players to reset the End, may not be desirable on servers.
     B:enableTempleCaller=true
 
     # Notifies users about new updates. It does not slow the game down.
-    B:enableUpdateNotifications=true
+    B:enableUpdateNotifications=false
 
     # Ender Goo interacts with Water by battling it, this might cause lag from block updates.
     B:gooBattlesWater=true
