--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -156,6 +156,35 @@ Custom {
 }
 
 
+ElnTungsten {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x312b27
+    D:energy=1.0
+    S:extra=ElnTungsten
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Gold {
     B:"Disable All"=false
     B:Eln=true
@@ -359,6 +388,35 @@ Nickel {
 }
 
 
+Osmium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x9ca6b4
+    D:energy=2.0
+    S:extra=Osmium
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Platinum {
     B:"Disable All"=false
     B:Eln=true
@@ -405,6 +463,35 @@ Recipes {
     B:appliedenergistics2=true
     B:aura=true
     B:bcadditions=true
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Silicon {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:UltraTech=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x14141d
+    D:energy=1.0
+    S:extra=Silicon
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
