--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -3,6 +3,9 @@
 compat {
     B:enableMFR=true
 
+    # ForgeMultipart schematic integration. [default: true]
+    B:enableMultipart=true
+
     # NEI recipe and ledger integration. [default: true]
     B:enableNEI=true
 }
