--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -68,6 +68,7 @@ items {
     B:HealingAxeEnabled=true
     B:HeatingCoilEnabled=true
     B:LawSwordEnabled=true
+    B:MicroBlocksEnabled=true
     B:PaintBrushEnabled=true
     B:PrecisionShearsIdEnabled=true
     B:ScannerEnabled=true
@@ -85,6 +86,7 @@ options {
      >
     I:deepDarkDimensionID=-100
     B:disableEnderPumpInAllDimensions=false
+    B:disableMultiBlocksCreativeTab=false
     B:disableTransferNodeCobblegen=false
     B:disableTransferNodeParticles=false
     B:disableTransferNodeWatergen=false
