--- a/config/computronics.cfg
+++ b/config/computronics.cfg
@@ -77,6 +77,7 @@ modcompatibility {
     B:enableAE2SpatialIOComponent=true
     B:enableBuildCraftDrivers=true
     B:enableEnderIOComponents=true
+    B:enableMekanismEnergyStoragePeripheral=true
     B:enableRailcraftRoutingComponents=true
 }
 
