--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4284,6 +4284,8 @@ enderio {
     B:blockHootch=false
     B:blockHyperCube=false
     B:blockIngotStorage=true
+    B:blockInhibitorObelisk=false
+    B:blockInventoryPanel=false
     B:blockKillerJoe=false
     B:blockLightNode=false
     B:blockNutrientdistillation=false
@@ -4301,10 +4303,12 @@ enderio {
     B:blockStirlingGenerator=false
     B:blockTank=false
     B:blockTank.1=false
+    B:blockTelePad=false
     B:blockTransceiver=false
     B:blockTravelAnchor=false
     B:blockVacuumChest=false
     B:blockVat=false
+    B:blockWeatherObelisk=false
     B:blockWirelessCharger=false
     B:blockZombieGenerator=false
 }
@@ -9377,6 +9381,29 @@ thaumicenergistics {
     B:thaumicenergisticsblockgolemgearbox=false
     B:thaumicenergisticsblockinfusionprovider=false
     B:thaumicenergisticsblockknowledgeinscriber=false
+}
+
+
+thaumichorizons {
+    B:alchemite=true
+    B:bloodInfuser=false
+    B:chocolate=true
+    B:essentiaDynamo=false
+    B:evanescent=false
+    B:inspiratron=false
+    B:light=false
+    B:lightSolar=false
+    B:modMatrix=false
+    B:nodeMonitor=false
+    B:soulBeacon=false
+    B:soulJar=false
+    B:soulSieve=false
+    B:soulforge=false
+    B:synthNode=false
+    B:vat=false
+    B:vatInterior=false
+    B:vatSolid=false
+    B:visDynamo=false
 }
 
 
