--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -18,8 +18,8 @@ client {
 general {
     B:AllowSpawnerBoxPickup=true
     I:AmbientLightingLevel=15
-    B:BlacklistIC2Power=false
-    B:BlacklistRFPower=false
+    B:BlacklistIC2Power=true
+    B:BlacklistRFPower=true
     I:ClientUpdateDelay=10
     B:ControlCircuitOreDict=true
     I:CopperPerChunk=0
@@ -29,7 +29,7 @@ general {
     B:DynamicTankEasterEgg=false
     D:EUToJoules=0.1
     B:EnableAmbientLighting=true
-    B:EnableWorldRegeneration=false
+    B:EnableWorldRegeneration=true
     D:EnergyPerRedstone=10000.0
     S:EnergyType=J
     I:EthyleneBurnTime=40
@@ -55,7 +55,7 @@ general {
     I:UpgradeModifier=10
     I:VoicePort=36123
     B:VoiceServerEnabled=true
-    I:WorldRegenVersion=0
+    I:WorldRegenVersion=1
 }
 
 
