--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -13,7 +13,7 @@ balancing {
 
 compatibility {
     B:ComputerProbeEnable=true
-    B:ElnToOtherEnergyConverterEnable=true
+    B:ElnToOtherEnergyConverterEnable=false
 }
 
 
@@ -53,7 +53,7 @@ lamp {
 mapgenerate {
     B:cinnabar=true
     B:cooper=false
-    B:forceOreRegen=false
+    B:forceOreRegen=true
     B:lead=false
     B:plumb=true
     B:tungsten=true
