--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -23,8 +23,17 @@
 
 
 "anchor settings" {
+    # Number of ticks cooldown between activations (1 sec = 20 ticks)
+    I:travelAnchorCooldown=0
+
     # Maximum number of blocks that can be traveled from one travel anchor to another.
     I:travelAnchorMaxDistance=48
+
+    # Travel Anchors send a chat warning when skipping inaccessible anchors
+    B:travelAnchorSkipWarning=true
+
+    # Add sneak as an option to activate travel anchors
+    B:travelAnchorSneak=true
 }
 
 
@@ -135,6 +144,21 @@
 
     # Amount of power stored by dark steel items with a level 2 upgrade.
     I:darkSteelPowerStorageLevelTwo=250000
+
+    # The increase in effected area (radius) when powered and used on blocks.
+    I:darkSteelShearsBlockAreaBoostWhenPowered=2
+
+    # How much more durable as vanilla shears they are.
+    I:darkSteelShearsDurabilityFactor=5
+
+    # The increase in efficiency when powered.
+    D:darkSteelShearsEffeciencyBoostWhenPowered=2.0
+
+    # The increase in effected area (radius) when powered and used on sheep.
+    D:darkSteelShearsEntityAreaBoostWhenPowered=3.0
+
+    # Power use (RF) per damage/durability point avoided.
+    I:darkSteelShearsPowerUsePerDamagePoint=250
 
     # If enabled allows the solar upgrade to charge non-darksteel armors that the player is wearing.
     B:darkSteelSolarChargeOthers=true
@@ -250,10 +274,10 @@
 
 
 "efficiency settings" {
-    # Number of millibuckets per tick extracted by pressurised fluid conduits auto extracting
+    # Number of millibuckets per tick extracted by pressurized fluid conduits auto extracting
     I:advancedFluidConduitExtractRate=100
 
-    # Number of millibuckets per tick that can pass through a single connection to an pressurised fluid conduit.
+    # Number of millibuckets per tick that can pass through a single connection to an pressurized fluid conduit.
     I:advancedFluidConduitMaxIoRate=400
 
     # Number of millibuckets per tick extracted by ender fluid conduits auto extracting
@@ -287,7 +311,7 @@
     B:updateLightingWhenHidingFacades=false
 
     # The range of the vacuum chest
-    D:vacumChestRange=6.0
+    D:vacumChestRange=6
 
     # The range of the wireless charger
     I:wirelessChargerRange=24
@@ -300,11 +324,13 @@ enchantments {
 
     # The id of the enchantment. If set to -1 the lowest unassigned id will be used.
     I:enchantmentSoulBoundId=-1
+
+    # The chance of getting this enchantment in the enchantment table
+    I:enchantmentSoulBoundWeight=1
 }
 
 
 enchantmentsoulboundweight {
-    # The chance of getting this enchantment in the enchantment table
     I:Enchantments=1
 }
 
@@ -321,6 +347,12 @@ enchantmentsoulboundweight {
 
     # Should axes in a farm take damage when breaking leaves?
     B:farmAxeDamageOnLeafBreak=false
+
+    # The amount of power used by a farm per bone meal used
+    I:farmBonemealActionEnergyUseRF=160
+
+    # The amount of power used by a farm per bone meal try
+    I:farmBonemealTryEnergyUseRF=80
 
     # The amount of power used by a farm per tick 
     I:farmContinuousEnergyUseRF=40
@@ -371,6 +403,9 @@ enchantmentsoulboundweight {
     # This setting controls whether mana beans from Thaumcraft can be harvested by the farm.
     B:farmManaBeansEnabled=false
 
+    # The amount of saplings the farm has to have in reserve to switch to shearing all leaves. If there are less saplings in store, it will only shear part the leaves and break the others for spalings. Set this to 0 to always shear all leaves.
+    I:farmSaplingReserveAmount=8
+
     # The chance that a tool in the farm will take damage.
     D:farmToolTakeDamageChance=1.0
 }
@@ -382,11 +417,29 @@ enchantmentsoulboundweight {
 }
 
 
+inventorypanel {
+    # Internal power used per item extracted (not a stack of items) [range: 0.0 ~ 10.0, default: 12.0]
+    S:extractCostPerItem=12.0
+
+    # Internal power used per extract operation (independent of stack size) [range: 0.0 ~ 10000.0, default: 32.0]
+    S:extractCostPerOperation=32.0
+
+    # Internal power generated per mB. The default of 800/mB matches the RF generation of the Zombie generator. A panel tries to refill only once every second - setting this value too low slows down the scanning speed. [range: 1.0 ~ 10000.0, default: 800.0]
+    S:powerPerMB=800.0
+
+    # Internal power used for scanning a slot [range: 0.0 ~ 10.0, default: 0.1]
+    S:scanCostPerSlot=0.1
+}
+
+
 "item enabling" {
     # Allows ME conduits. Only has an effect with AE2 installed. [default: true]
     B:enableMEConduits=true
 
-    # Can be set to 'auto', 'true' or 'false'. When set to auto the gas conduit will only be enabled when Mekanism is installed. [default: auto]
+    # If true, gas conduits will be enabled if the Mekanism Gas API is found. False to forcibly disable. [default: true]
+    B:gasConduitEnabled=false
+
+    # Deprecated option. Use boolean "gasConduitsEnabled" below. [default: auto]
     S:isGasConduitEnabled=auto
 
     # If set to false: Photovoltaic Cells will not be craftable.
@@ -476,6 +529,25 @@ enchantmentsoulboundweight {
 
 
 "magnet settings" {
+    # If true the magnet can be put into the 'amulet' Baubles slot even if switched off (requires Baubles to be installed and magnetAllowInBaublesSlot to be on)
+    B:magnetAllowDeactivatedInBaublesSlot=false
+
+    # If true the magnet can be put into the 'amulet' Baubles slot (requires Baubles to be installed)
+    B:magnetAllowInBaublesSlot=true
+
+    # If true the magnet will also work in the main inventory, not just the hotbar
+    B:magnetAllowInMainInventory=false
+
+    # The BaulesType the magnet should be, 'AMULET', 'RING' or 'BELT' (requires Baubles to be installed and magnetAllowInBaublesSlot to be on)
+    S:magnetBaublesType=AMULET
+
+    # These items will not be picked up by the magnet. [default: [appliedenergistics2:item.ItemCrystalSeed], [Botania:livingrock], [Botania:manaTablet]]
+    S:magnetBlacklist <
+        appliedenergistics2:item.ItemCrystalSeed
+        Botania:livingrock
+        Botania:manaTablet
+     >
+
     # Amount of RF power stored in a fully charged magnet
     I:magnetPowerCapacityRF=100000
 
@@ -488,11 +560,17 @@ enchantmentsoulboundweight {
 
 
 misc {
+    # Allows machines to run faster if another mod speeds up the tickrate. Running at higher tickrates is unsupported. Disable this if you run into any kind of problem.
+    B:allowExternalTickSpeedup=true
+
     # If true, quite clear glass will connect textures with fused quartz. [default: false]
     B:clearGlassConnectToFusedQuartz=false
 
     # If true, quite clear glass will use the fused quartz border texture for the block instead of the white border. [default: false]
     B:clearGlassSameTexture=false
+
+    # Enables emptying vanilla water bottles without breaking the bottle. In combination with a water source block this allows duping of water without cost.
+    B:enableWaterFromBottles=true
 
     # Maximum level of XP the killer joe can contain.
     I:killerJoeMaxXpLevel=2147483647
@@ -709,6 +787,9 @@ misc {
     # The number of levels it costs to add a broken spawner
     I:powerSpawnerAddSpawnerCost=30
 
+    # Number of seconds in which spawned entities are protected from despawning
+    I:poweredSpawnerDespawnTimeSeconds=120
+
     # RF per tick for a level 1 (non-upgraded) spawner. See PoweredSpanerConfig_Core.json for mob type multipliers
     I:poweredSpawnerLevelOnePowerPerTickRF=160
 
@@ -736,7 +817,7 @@ rail {
     # When set to true the RF cost of sending a cart within the same dimension will be capped to the cross dimension cost [default: true]
     B:enderRailCapSameDimensionPowerAtCrossDimensionCost=true
 
-    # Wether Ender Rails are enabled [default: true]
+    # Whether Ender Rails are enabled [default: true]
     B:enderRailEnabled=true
 
     # The amount of power required to transport a cart across dimensions
@@ -873,6 +954,36 @@ replacewitherskeletons {
 
     # Number of RF required per block travelled using the Staff of the Traveling.
     D:travelStaffPowerPerBlockRF=250.0
+}
+
+
+telepad {
+    # If true, the coordinates cannot be set via the GUI, the coord selector must be used.
+    B:lockCoords=true
+
+    # If true, the dimension cannot be set via the GUI, the coord selector must be used.
+    B:lockDimension=true
+}
+
+
+weather {
+    # The item required to set the world to clear weather.
+    S:weatherObeliskClearItem=minecraft:cake
+
+    # The power required to set the world to clear weather
+    I:weatherObeliskClearPower=1000000
+
+    # The item required to set the world to rainy weather.
+    S:weatherObeliskRainItem=minecraft:water_bucket
+
+    # The power required to set the world to rainy weather
+    I:weatherObeliskRainPower=250000
+
+    # The item required to set the world to thundering weather.
+    S:weatherObeliskThunderItem=minecraft:lava_bucket
+
+    # The power required to set the world to thundering weather
+    I:weatherObeliskThunderPower=500000
 }
 
 
