--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -9,7 +9,7 @@ Aluminium {
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
-    B:RotaryCraft=true
+    B:RotaryCraft=false
     B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
