--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created May 14, 2015 7:54:56 PM
+; created May 16, 2015 9:45:57 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
