--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -53,7 +53,7 @@ lamp {
 mapgenerate {
     B:cinnabar=true
     B:cooper=false
-    B:forceOreRegen=true
+    B:forceOreRegen=false
     B:lead=false
     B:plumb=true
     B:tungsten=true
