--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created May 16, 2015 9:45:57 AM
+; created May 16, 2015 11:17:35 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
