--- a/config/cofh/core/common.cfg
+++ b/config/cofh/core/common.cfg
@@ -33,11 +33,20 @@ Version {
 
 
 World {
+    # This will flatten the bedrock layer.
     B:FlatBedrock=false
+
+    # The number of layers of bedrock to flatten to. (Max: 8)
     I:FlatBedrockLayers=1
+
+    # This allows for vanilla Minecraft ore generation to be REPLACED. Configure in the Vanilla.json file; vanilla defaults have been provided. If you rename the Vanilla.json file, this option WILL NOT WORK.
     B:ReplaceVanillaGeneration=true
+
+    # If FlatBedrock is enabled, this will enforce it in previously generated chunks.
     B:RetroactiveFlatBedrock=false
-    B:RetroactiveOreGeneration=true
+
+    # This will retroactively generate ores in previously generated chunks.
+    B:RetroactiveOreGeneration=false
 
     Tweaks {
         # Set this to a value > 1 to make trees grow more infrequently. Rate is 1 in N. Example: If this value is set to 3, trees will take 3x the time to grow, on average.
