--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5797,6 +5797,7 @@ gardentrees {
     B:thinlog.12701=false
     B:thinlog.12715=false
     B:thinlog.12716=false
+    B:thinlog.1272=false
     B:thinlog.12741=false
     B:thinlog.12743=false
     B:thinlog.12766=false
@@ -5816,6 +5817,7 @@ gardentrees {
     B:thinlog.12856=false
     B:thinlog.1286=false
     B:thinlog.12873=false
+    B:thinlog.1288=false
     B:thinlog.12883=false
     B:thinlog.12909=false
     B:thinlog.12919=false
@@ -5825,6 +5827,8 @@ gardentrees {
     B:thinlog.13259=false
     B:thinlog.13260=false
     B:thinlog.13261=false
+    B:thinlog.13262=false
+    B:thinlog.13263=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -5852,8 +5856,10 @@ gardentrees {
     B:thinlog.13536=false
     B:thinlog.13557=false
     B:thinlog.13558=false
+    B:thinlog.13560=false
     B:thinlog.13573=false
     B:thinlog.13574=false
+    B:thinlog.13576=false
     B:thinlog.169=false
     B:thinlog.176=false
     B:thinlog.182=false
@@ -5938,6 +5944,8 @@ gardentrees {
     B:thinlog.5067=false
     B:thinlog.5068=false
     B:thinlog.5069=false
+    B:thinlog.5070=false
+    B:thinlog.5071=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -5965,8 +5973,10 @@ gardentrees {
     B:thinlog.5344=false
     B:thinlog.5365=false
     B:thinlog.5366=false
+    B:thinlog.5368=false
     B:thinlog.5381=false
     B:thinlog.5382=false
+    B:thinlog.5384=false
     B:thinlog.561=false
     B:thinlog.562=false
     B:thinlog.563=false
@@ -6038,6 +6048,8 @@ gardentrees {
     B:thinlog.9163=false
     B:thinlog.9164=false
     B:thinlog.9165=false
+    B:thinlog.9166=false
+    B:thinlog.9167=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6065,12 +6077,16 @@ gardentrees {
     B:thinlog.9440=false
     B:thinlog.9461=false
     B:thinlog.9462=false
+    B:thinlog.9464=false
     B:thinlog.9477=false
     B:thinlog.9478=false
+    B:thinlog.9480=false
     B:thinlog.970=false
     B:thinlog.971=false
     B:thinlog.972=false
     B:thinlog.973=false
+    B:thinlog.974=false
+    B:thinlog.975=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -6106,6 +6122,7 @@ gardentrees {
     B:thinlogfence.12701=false
     B:thinlogfence.12715=false
     B:thinlogfence.12716=false
+    B:thinlogfence.1272=false
     B:thinlogfence.12741=false
     B:thinlogfence.12743=false
     B:thinlogfence.12766=false
@@ -6125,6 +6142,7 @@ gardentrees {
     B:thinlogfence.12856=false
     B:thinlogfence.1286=false
     B:thinlogfence.12873=false
+    B:thinlogfence.1288=false
     B:thinlogfence.12883=false
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
@@ -6134,6 +6152,8 @@ gardentrees {
     B:thinlogfence.13259=false
     B:thinlogfence.13260=false
     B:thinlogfence.13261=false
+    B:thinlogfence.13262=false
+    B:thinlogfence.13263=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6161,8 +6181,10 @@ gardentrees {
     B:thinlogfence.13536=false
     B:thinlogfence.13557=false
     B:thinlogfence.13558=false
+    B:thinlogfence.13560=false
     B:thinlogfence.13573=false
     B:thinlogfence.13574=false
+    B:thinlogfence.13576=false
     B:thinlogfence.169=false
     B:thinlogfence.176=false
     B:thinlogfence.182=false
@@ -6247,6 +6269,8 @@ gardentrees {
     B:thinlogfence.5067=false
     B:thinlogfence.5068=false
     B:thinlogfence.5069=false
+    B:thinlogfence.5070=false
+    B:thinlogfence.5071=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6274,8 +6298,10 @@ gardentrees {
     B:thinlogfence.5344=false
     B:thinlogfence.5365=false
     B:thinlogfence.5366=false
+    B:thinlogfence.5368=false
     B:thinlogfence.5381=false
     B:thinlogfence.5382=false
+    B:thinlogfence.5384=false
     B:thinlogfence.561=false
     B:thinlogfence.562=false
     B:thinlogfence.563=false
@@ -6347,6 +6373,8 @@ gardentrees {
     B:thinlogfence.9163=false
     B:thinlogfence.9164=false
     B:thinlogfence.9165=false
+    B:thinlogfence.9166=false
+    B:thinlogfence.9167=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6374,12 +6402,16 @@ gardentrees {
     B:thinlogfence.9440=false
     B:thinlogfence.9461=false
     B:thinlogfence.9462=false
+    B:thinlogfence.9464=false
     B:thinlogfence.9477=false
     B:thinlogfence.9478=false
+    B:thinlogfence.9480=false
     B:thinlogfence.970=false
     B:thinlogfence.971=false
     B:thinlogfence.972=false
     B:thinlogfence.973=false
+    B:thinlogfence.974=false
+    B:thinlogfence.975=false
 }
 
 
