--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created May 16, 2015 11:17:35 PM
+; created May 17, 2015 2:36:12 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
