--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -54,7 +54,7 @@ general {
     B:UpdateNotifications=true
     I:UpgradeModifier=10
     I:VoicePort=36123
-    B:VoiceServerEnabled=true
+    B:VoiceServerEnabled=false
     I:WorldRegenVersion=0
 }
 
