--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -437,7 +437,7 @@ inventorypanel {
     B:enableMEConduits=true
 
     # If true, gas conduits will be enabled if the Mekanism Gas API is found. False to forcibly disable. [default: true]
-    B:gasConduitEnabled=false
+    B:gasConduitEnabled=true
 
     # Deprecated option. Use boolean "gasConduitsEnabled" below. [default: auto]
     S:isGasConduitEnabled=auto
